examples/test/testpolicy4325.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4325
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key1: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value33
      podSelector:
        matchLabels:
          key1: value16
          key7: value23
          key34: value43
